# accelerator

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  MLproject  PKG_TEMPLATE.md  README.md  STANDARDS.md  check.ipynb  debug_imports.py  pyproject.toml  run_pipe.py
accelerator/: __init__.py
accelerator-algorithm/: README.md  pyproject.toml
accelerator-algorithm/src/accelerator/algorithm/: __init__.py  base.py  pruning_op.py  registry.py
accelerator-algorithm/src/accelerator/algorithm/optimization/: __init__.py
accelerator-algorithm/src/accelerator/algorithm/optimization/smooth_removing/: __init__.py  base.py  dynamic_convolution.py  dynamic_layer_norm.py  dynamic_rmsnorm.py
accelerator-algorithm/src/accelerator/algorithm/pruning/: __init__.py
accelerator-algorithm/src/accelerator/algorithm/pruning/pruner/: base.py  merging.py  pruners.py
accelerator-algorithm/src/accelerator/algorithm/pruning/pruner/feature_merging/: __init__.py  parametrizations.py
accelerator-algorithm/src/accelerator/algorithm/pruning/pruner/feature_merging/importance/: __init__.py  compute_mat_grad.py  importances.py
accelerator-algorithm/src/accelerator/algorithm/pruning/tracer/: __init__.py  group.py  operations.py  tracer.py
accelerator-algorithm/src/accelerator/algorithm/pruning/utils/: __init__.py  imagenet.py  op_counter.py  serialization.py  typing.py  utils.py
accelerator-algorithm/tests/: __init__.py  test_base_infrastructure.py  test_imports.py
accelerator-analysis/: pyproject.toml
accelerator-benchmark/: pyproject.toml
accelerator-cli/: pyproject.toml
accelerator-core/: README.md  check.ipynb  pyproject.toml
accelerator-core/src/accelerator/core/: __init__.py
accelerator-core/src/accelerator/core/acceleration/: __init__.py  base.py  registry.py
accelerator-core/src/accelerator/core/callbacks/: __init__.py  always_on.py  base.py  logger.py  manager.py  progress.py
accelerator-core/src/accelerator/core/checkpoint/: __init__.py  checkpoint_handler.py  manager.py  meta_handler.py
accelerator-core/src/accelerator/core/checkpoint/operation/: __init__.py  registry.py
accelerator-core/src/accelerator/core/checkpoint/operation/ckpt_transform/: __init__.py  add_default_gamma.py  add_dynamic_max_qpp.py  add_experimental_gammas.py  change_gamma_1120_to_912.py  change_gamma_1430_to_143.py  change_gamma_1430_to_943.py  change_gamma_1430_to_943_add_dynamic_max_mlpqpp.py  change_gamma_1430_to_943_add_dynamic_max_qpp.py  change_gamma_forward_to_experimental_gamma.py  change_gamma_inverse_to_experimental_gamma.py  change_gammas_to_experimental_gamma.py  common.py  remove_is_rep.py  remove_meta_block_and_tail.py  remove_module_prefix.py  remove_pretrain_count.py
accelerator-core/src/accelerator/core/checkpoint/operation/load_ops/: __init__.py  change_linear_to_conv.py  remove_skip_connections.py
accelerator-core/src/accelerator/core/context/: __init__.py  component.py  containers.py  context.py  reference_manager.py  training.py
accelerator-core/src/accelerator/core/datamodule/: __init__.py  datamodule.py
accelerator-core/src/accelerator/core/distillation/: __init__.py  manager.py
accelerator-core/src/accelerator/core/engine/: __init__.py  accelerate.py  base.py  single_gpu.py  vanilla_torch.py
accelerator-core/src/accelerator/core/loss/: __init__.py  base.py  combiner.py  debug.py  errors.py  registry.py  statistics.py  validation.py
accelerator-core/src/accelerator/core/model/: __init__.py  accelerated_model.py
accelerator-core/src/accelerator/core/model/gamma/: __init__.py
accelerator-core/src/accelerator/core/pipeline/: __init__.py  step.py
accelerator-core/src/accelerator/core/scheduler/: __init__.py  base.py
accelerator-core/src/accelerator/core/transform/: __init__.py  base.py  container_transform.py  container_utils.py  registry.py
accelerator-core/src/accelerator/core/transform/loss/: base.py  manager.py
accelerator-core/src/accelerator/core/transform/model/: __init__.py  transforms.py
accelerator-core/src/accelerator/core/typings/: __init__.py  base.py
accelerator-core/tests/: __init__.py  test_imports.py
accelerator-core/tests/context/: test_containers.py  test_context.py  test_reference_manager.py
accelerator-core/tests/transform/: test_container_transform.py  test_container_utils.py  test_model_transforms.py
accelerator-domains/accelerator-audio/: pyproject.toml
accelerator-domains/accelerator-cross/: pyproject.toml
accelerator-domains/accelerator-custom/: pyproject.toml
accelerator-domains/accelerator-nlp/: pyproject.toml
accelerator-domains/accelerator-vision/: pyproject.toml
accelerator-explainability/: pyproject.toml
accelerator-hub/: pyproject.toml
accelerator-tuner/: pyproject.toml
accelerator-tuner/src/accelerator/tuner/loop/: __init__.py  base.py  train.py
accelerator-ui/: pyproject.toml
accelerator-utilities/: README.md  pyproject.toml
accelerator-utilities/src/accelerator/utilities/: __init__.py  api_desc.py  apply_func.py  base_container.py  default_config.py  experimental.py  hashable.py  logging.py  move_to_device.py  pickle.py  seed.py  signatures.py  string.py  typings.py  utils.py
accelerator-utilities/src/accelerator/utilities/distributed_state/: __init__.py  state.py
accelerator-utilities/src/accelerator/utilities/hydra_utils/: __init__.py  callbacks.py  logger.py  monitor.py  utils.py
accelerator-utilities/src/accelerator/utilities/model_utils/: __init__.py  names.py  unwrap.py
accelerator-utilities/src/accelerator/utilities/onnx_utils/: tracing.py
accelerator-utilities/src/accelerator/utilities/patches/: __init__.py  mlflow.py
accelerator-utilities/src/accelerator/utilities/registry/: __init__.py  base_registry.py  domain.py  registry_metadata.py
accelerator-utilities/src/accelerator/utilities/resolvers/: __init__.py  padding.py  uuid.py
accelerator-utilities/src/accelerator/utilities/rich_utils/: __init__.py  config_tree.py
accelerator-utilities/tests/: __init__.py  test_imports.py
accelerator_legacy/: MLProject
analysis/: graph.py
(+362 files in other folders)
