[tool.poetry]
name = "accelerator"
version = "0.1.0"
description = ""
authors = ["addicted-by <ras.unlucky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pynvml = "^11.5.0"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
