[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator-utilities"
version = "0.1.0"
description = "Framework-agnostic utilities and helpers for the accelerator framework"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.5.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "rich",
    "onnx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
]

# -----------------------
# Packaging
# -----------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["accelerator*"]

[tool.setuptools.package-dir]
"" = "src"

# -----------------------
# Formatting
# -----------------------
[tool.black]
line-length = 120
target-version = ["py39", "py310"]

# -----------------------
# Ruff (lint + imports)
# -----------------------
[tool.ruff-check]
target-version = "py39"
line-length = 120
fix = true

select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort replacement
    "UP",  # pyupgrade
    "B",   # bugbear
]

ignore = [
    "E203",  # Black compatibility
    "E501",  # Line length handled by Black
    "UP007", # Use X | Y for type annotations
    "B026", # Star-arg unpacking after a keyword argument is strongly discouraged
]

[tool.ruff-check.isort]
combine-as-imports = true
known-first-party = ["accelerator"]
