[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator-cli"
version = "0.1.0"
description = "Command line interface for the accelerator framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Accelerator Team"}
]
dependencies = [
    "accelerator-core",
    "accelerator-utilities",
    "click",
    "rich",
]

[project.scripts]
accel = "accelerator.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["accelerator*"]

[tool.setuptools.package-dir]
"" = "src"
