[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator-core"
version = "0.1.0"
description = "Core runtime components and framework infrastructure for the Accelerator ML framework"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Accelerator Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "accelerator-utilities",
    "torch>=2.5.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["accelerator*"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120
