[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator-ui"
version = "0.1.0"
description = "Visualization and reporting tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Accelerator Team"}
]
dependencies = [
    "accelerator-utilities",
    "ipywidgets",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["accelerator*"]

[tool.setuptools.package-dir]
"" = "src"
